--- a/style/style.css
+++ b/style/style.css
@@ -182,7 +182,7 @@ vertical-align: bottom;
     outline: none; 
 }
 
-.cars-filter ul li.active,
+.cars-filter ul li.active , 
 .cars-filter ul li:hover {
     color: #F8FF23;
     border-color: #F8FF23;
@@ -255,4 +255,71 @@ vertical-align: bottom;
 
 .car-action .button {
     width: 100%;
+}
+
+
+.order {
+    padding-top: 159px;
+    padding-bottom: 130px;
+}
+
+.order .container {
+    position: relative;
+}
+
+.order img {
+    position: absolute;
+    top: -25px;
+    left: -530px;
+}
+
+.order form {
+    margin-left: 714px;
+    max-width: 486px;
+}
+
+.order h3 {
+    font-weight: normal;
+    font-size: 65px;
+    line-height: 100%;
+    margin-bottom: 40px;
+}
+
+.order p {
+    font-size: 24px;
+    line-height: 120%;
+    color: #d4d4d4;
+    margin-bottom: 60px;
+    max-width: 450px;
+}
+
+.order-form {
+    width: 344px;
+}
+
+::placeholder {
+    color: #d4d4d4;
+}
+
+.order-form input {
+    width: 100%;
+    height: 68px;
+    padding: 24px 20px;
+    box-sizing: border-box;
+    color: #ffffff;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    margin-bottom: 15px;
+    font-size: 16px;
+    outline: none;
+
+}
+
+.footer {
+    padding: 70px 0;
+    border-top: 1px solid #5f5f5f;
+}
+
+.footer .container{
+    
 }
