--- a/style/style.css
+++ b/style/style.css
@@ -320,6 +320,16 @@ vertical-align: bottom;
     border-top: 1px solid #5f5f5f;
 }
 
-.footer .container{
-    
+.footer .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.rights {
+    font-size: 14px;
+    line-height: 90%;
+    letter-spacing: normal;
+    font-weight: bold;
+    text-transform: uppercase;
 }
